--- a/productDesc.html
+++ b/productDesc.html
@@ -32,6 +32,10 @@
             </div>
         </header>
 
+        <section class="productDesc">
+
+        </section>
+
         <main class="productList">
 
         </main>
