--- a/productDesc.html
+++ b/productDesc.html
@@ -36,9 +36,11 @@
 
         </section>
 
-        <main class="productList">
 
-        </main>
+        <section class="productList">
+
+        </section>
+        
     </div>
 
     <section class="cartDiv">
